<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/dp16"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Reciting famous sayings"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_loginName"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_login" />

            <EditText
                android:id="@+id/mMobileEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp8"
                android:background="@color/white"
                android:hint="@string/input_name"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorCCC"
                android:textSize="@dimen/sp16" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_pwd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_pwd" />

            <EditText
                android:id="@+id/mPwdEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp8"
                android:background="@color/white"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorCCC"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <CheckBox
            android:id="@+id/ck_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/remember_password" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_btn"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/not_account"
            android:textColor="@color/colorCCC"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>

